# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-4287e2f2/example-4287e2f2-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_4287e2f2"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_4287e2f2"]
        
        [project]
        name = "example-4287e2f2"
        version = "0.0.0"
        dependencies = ["example-4287e2f2-a"]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`"
  
      ''',
      'build/example-4287e2f2/example-4287e2f2-0.0.0/src/example_4287e2f2/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-4287e2f2/example-4287e2f2-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_4287e2f2_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_4287e2f2_a"]
        
        [project]
        name = "example-4287e2f2-a"
        version = "1.0.0"
        dependencies = ["example-4287e2f2-b>1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-4287e2f2/example-4287e2f2-a-1.0.0/src/example_4287e2f2_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-4287e2f2/example-4287e2f2-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_4287e2f2_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_4287e2f2_b"]
        
        [project]
        name = "example-4287e2f2-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-4287e2f2/example-4287e2f2-b-1.0.0/src/example_4287e2f2_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-4287e2f2/example-4287e2f2-b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_4287e2f2_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_4287e2f2_b"]
        
        [project]
        name = "example-4287e2f2-b"
        version = "2.0.0"
        dependencies = ["example-4287e2f2-c"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-4287e2f2/example-4287e2f2-b-2.0.0/src/example_4287e2f2_b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-4287e2f2/example-4287e2f2-b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_4287e2f2_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_4287e2f2_b"]
        
        [project]
        name = "example-4287e2f2-b"
        version = "3.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-4287e2f2/example-4287e2f2-b-3.0.0/src/example_4287e2f2_b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-4287e2f2/example_4287e2f2-0.0.0.tar.gz': 'md5:92720e387cfba3ee973e5c6fccce0230',
      'dist/example-4287e2f2/example_4287e2f2_a-1.0.0-py3-none-any.whl': 'md5:ab0085e311bd23ad9d4e886a9a3147fc',
      'dist/example-4287e2f2/example_4287e2f2_a-1.0.0.tar.gz': 'md5:282684142c16ca0ab72acdb783482000',
      'dist/example-4287e2f2/example_4287e2f2_b-1.0.0-py3-none-any.whl': 'md5:bd15d0c233f12ec0d16db06a101d680b',
      'dist/example-4287e2f2/example_4287e2f2_b-1.0.0.tar.gz': 'md5:f8a5f57af73fc2b806506f9e32ebad81',
      'dist/example-4287e2f2/example_4287e2f2_b-2.0.0-py3-none-any.whl': 'md5:022e5e679080d57bf63811c43b4cb11e',
      'dist/example-4287e2f2/example_4287e2f2_b-2.0.0.tar.gz': 'md5:d932f30d94cd8deb9db62d4c1067e22d',
      'dist/example-4287e2f2/example_4287e2f2_b-3.0.0-py3-none-any.whl': 'md5:8874f49fc175fb370e6d602cb9ed577f',
      'dist/example-4287e2f2/example_4287e2f2_b-3.0.0.tar.gz': 'md5:d016a9877ed1e63998c6b310dba2fbef',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-4287e2f2
        │       ├── example-4287e2f2-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_4287e2f2
        │       │           └── __init__.py
        │       ├── example-4287e2f2-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_4287e2f2_a
        │       │           └── __init__.py
        │       ├── example-4287e2f2-b-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_4287e2f2_b
        │       │           └── __init__.py
        │       ├── example-4287e2f2-b-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_4287e2f2_b
        │       │           └── __init__.py
        │       └── example-4287e2f2-b-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_4287e2f2_b
        │                   └── __init__.py
        └── dist
            └── example-4287e2f2
                ├── example_4287e2f2-0.0.0.tar.gz
                ├── example_4287e2f2_a-1.0.0-py3-none-any.whl
                ├── example_4287e2f2_a-1.0.0.tar.gz
                ├── example_4287e2f2_b-1.0.0-py3-none-any.whl
                ├── example_4287e2f2_b-1.0.0.tar.gz
                ├── example_4287e2f2_b-2.0.0-py3-none-any.whl
                ├── example_4287e2f2_b-2.0.0.tar.gz
                ├── example_4287e2f2_b-3.0.0-py3-none-any.whl
                └── example_4287e2f2_b-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-4287e2f2
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-4287e2f2
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-4287e2f2' in directory 'build/example-4287e2f2'
      Destination directory '[PWD]/build/example-4287e2f2' already exists. Pass `--rm` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-4287e2f2
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-c084d917/example-c084d917-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c084d917"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c084d917"]
        
        [project]
        name = "example-c084d917"
        version = "0.0.0"
        dependencies = ["example-c084d917-a"]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`"
  
      ''',
      'build/example-c084d917/example-c084d917-0.0.0/src/example_c084d917/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-c084d917/example-c084d917-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c084d917_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c084d917_a"]
        
        [project]
        name = "example-c084d917-a"
        version = "1.0.0"
        dependencies = ["example-c084d917-b>1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-c084d917/example-c084d917-a-1.0.0/src/example_c084d917_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-c084d917/example-c084d917-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c084d917_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c084d917_b"]
        
        [project]
        name = "example-c084d917-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-c084d917/example-c084d917-b-1.0.0/src/example_c084d917_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-c084d917/example-c084d917-b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c084d917_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c084d917_b"]
        
        [project]
        name = "example-c084d917-b"
        version = "2.0.0"
        dependencies = ["example-c084d917-c"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-c084d917/example-c084d917-b-2.0.0/src/example_c084d917_b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-c084d917/example-c084d917-b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c084d917_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c084d917_b"]
        
        [project]
        name = "example-c084d917-b"
        version = "3.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-c084d917/example-c084d917-b-3.0.0/src/example_c084d917_b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-c084d917/example_c084d917-0.0.0.tar.gz': 'md5:2f7751d631ecec37f2b26033e37da55a',
      'dist/example-c084d917/example_c084d917_a-1.0.0-py3-none-any.whl': 'md5:ab774212c9d435e36a606c74aab4afe9',
      'dist/example-c084d917/example_c084d917_a-1.0.0.tar.gz': 'md5:ead2a391fcd3b560e8247d8f9f0b73ea',
      'dist/example-c084d917/example_c084d917_b-1.0.0-py3-none-any.whl': 'md5:6c0161e189bafcb68828d85928e6010c',
      'dist/example-c084d917/example_c084d917_b-1.0.0.tar.gz': 'md5:1173e7cec8db9062f3e7c79a5583d706',
      'dist/example-c084d917/example_c084d917_b-2.0.0-py3-none-any.whl': 'md5:a421c967920b13380f658ba1f51bf92e',
      'dist/example-c084d917/example_c084d917_b-2.0.0.tar.gz': 'md5:2fe170d0ca9004311c0f2c3453162071',
      'dist/example-c084d917/example_c084d917_b-3.0.0-py3-none-any.whl': 'md5:04d6f88da200e00e581ce3b9fc20947a',
      'dist/example-c084d917/example_c084d917_b-3.0.0.tar.gz': 'md5:9b0f3dd1cc996afdf81726ec336623aa',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-c084d917
        │       ├── example-c084d917-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_c084d917
        │       │           └── __init__.py
        │       ├── example-c084d917-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_c084d917_a
        │       │           └── __init__.py
        │       ├── example-c084d917-b-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_c084d917_b
        │       │           └── __init__.py
        │       ├── example-c084d917-b-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_c084d917_b
        │       │           └── __init__.py
        │       └── example-c084d917-b-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_c084d917_b
        │                   └── __init__.py
        └── dist
            └── example-c084d917
                ├── example_c084d917-0.0.0.tar.gz
                ├── example_c084d917_a-1.0.0-py3-none-any.whl
                ├── example_c084d917_a-1.0.0.tar.gz
                ├── example_c084d917_b-1.0.0-py3-none-any.whl
                ├── example_c084d917_b-1.0.0.tar.gz
                ├── example_c084d917_b-2.0.0-py3-none-any.whl
                ├── example_c084d917_b-2.0.0.tar.gz
                ├── example_c084d917_b-3.0.0-py3-none-any.whl
                └── example_c084d917_b-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-c084d917
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--rm] [-v] [-q] targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
